syntax = "proto3";

package vault;

import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";
// import "google/rpc/status.proto";

option go_package = "pkg/proto";


service Vault {
    rpc GetConfig(google.protobuf.Empty) returns (AuthConfigResponse);
    rpc ListRemoteHosts(google.protobuf.Empty) returns (RemoteHostListResponse);
}

message AuthConfigResponse {
    string github_host = 1;
    string github_client_id = 2;
}

message RemoteHost {
    string name = 2;
    string host = 1;
    int64 port = 3;
}

message RemoteHostListResponse {
    repeated RemoteHost remote_hosts = 1;
}